# lumos.ai

./: .gitignore  AI_VALIDATION_COMPLETE.md  BUILTIN_TOOLS_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLI_ENHANCEMENTS_SUMMARY.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS_TECHNICAL_DETAILS.md  COMPILATION_PROGRESS_REPORT.md  COMPILATION_STATUS_REPORT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  DEMO_IMPLEMENTATION_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LUMOSAI_UI_PROJECT_SUMMARY.md  MASTRA_IMPLEMENTATION_COMPLETE.md  MASTRA_MIGRATION_SUMMARY.md  MEMORY_IMPLEMENTATION_SUMMARY.md  MONOREPO_GUIDE.md  PLAN7_COMPLETION_SUMMARY.md  PRODUCTION_READINESS_ASSESSMENT.md  PROJECT_CLEANUP_SUMMARY.md  README.md  README_CN.md  TEST_REPORT.md  TRANSFORMATION_ROADMAP.md  UI_COMPLETENESS_ANALYSIS.md  UI_CORE_COMPLETENESS_ANALYSIS.md  UI_DEPENDENCY_ANALYSIS.md  VALIDATION_SUMMARY.md  VECTOR_IMPLEMENTATION_REPORT.md  VERIFICATION_COMPLETE_REPORT.md  WARNING_FIX_REPORT.md  WORKFLOW_VALIDATION_FIX.md  agent_comparison_analysis.md  agent_enhancement_summary.md  agent_validation_report.md  (+56 more)
examples/rag_system/: Cargo.toml
lomusai_cli/: Cargo.toml  README.md
lomusai_cli/src/: config.rs  error.rs  main.rs  swagger.rs  template.rs  util.rs
lomusai_cli/tests/: cli_tests.rs
lomusai_core/: Cargo.toml  README.md
lomusai_core/examples/: agent_usage.rs  lumos_app.rs  lumos_macro_usage.rs  mcp_dsl.rs  rag_dsl.rs  workflow_dsl.rs  workflow_example.rs
lomusai_core/src/: app.rs  base.rs  error.rs  lib.rs  lomusai.rs  rag.rs
lomusai_core/tests/: llm_qwen_test.rs
lomusai_evals/: Cargo.toml
lomusai_evals/src/: error.rs  lib.rs  types.rs
lomusai_examples/: Cargo.toml  README.md
lomusai_examples/src/: agent_tools.rs  agent_usage.rs  basic_usage.rs  eval_dsl.rs  lumos_app.rs  macro_tool_example.rs  mcp_dsl.rs  workflow_example.rs
lomusai_network/: Cargo.toml
lomusai_network/src/: discovery.rs  error.rs  lib.rs  message.rs  network.rs  router.rs  topology.rs  types.rs
lomusai_rag/: Cargo.toml
lomusai_rag/src/: error.rs  lib.rs  types.rs
lomusai_stores/: Cargo.toml  README.md
lomusai_stores/examples/: rag_integration.rs  rag_integration_test.rs
lomusai_stores/src/: error.rs  lib.rs  postgres.rs  rag.rs  tests.rs  vector.rs  vectorize.rs
lumos_macro/: Cargo.toml  README.md
lumos_macro/src/: agent.rs  agent_dsl.rs  agent_macro.rs  eval.rs  lib.rs  llm_adapter_macro.rs  lumos.rs  mcp.rs  parser.rs  rag.rs  tool_macro.rs  tools.rs  workflow.rs
lumos_macro/tests/: agent_debug.rs
lumos_vector/: Cargo.toml  README.md
lumos_vector/examples/: basic_usage.rs
lumos_vector/src/: error.rs  lib.rs  types.rs
lumos_vector/tests/: integration_tests.rs
lumosai_ai_extensions/: Cargo.toml
lumosai_ai_extensions/examples/: ai_extensions_demo.rs
lumosai_ai_extensions/src/: error.rs  lib.rs
lumosai_bindings/: Cargo.toml  README.md
lumosai_bindings/examples/: multi_language_demo.rs
lumosai_bindings/npm/: index.d.ts  package.json
lumosai_bindings/python/: pyproject.toml
lumosai_bindings/src/: core.rs  error.rs  lib.rs  types.rs
lumosai_bindings/tests/: integration_tests.rs
lumosai_cli/: Cargo.toml  README.md
lumosai_cli/src/: config.rs  dev.md  error.rs  lib.rs  main.rs  swagger.rs  template.rs  util.rs
lumosai_cli/tests/: cli_tests.rs
lumosai_cloud/: Cargo.toml
lumosai_cloud/examples/: cloud_native_demo.rs
lumosai_cloud/src/: error.rs  lib.rs
lumosai_core/: Cargo.toml  ENHANCED_FEATURES.md  IMPLEMENTATION_SUMMARY.md  MEMORY_THREAD_INTEGRATION.md  README.md
lumosai_core/docs/: chinese_llm_providers.md  new_llm_providers.md
lumosai_core/examples/: chinese_llm_providers.rs  chinese_llm_providers_demo.rs  enterprise_monitoring_demo.rs  new_llm_providers.rs  security_demo.rs  streaming_llm_demo.rs  third_party_integration.rs
lumosai_core/src/: app.rs  error.rs  lib.rs  lumosai.rs  prelude.rs  rag.rs  unified_api.rs
lumosai_core/tests/: README.md  agent_memory_test.rs  chain_call_dsl_tests.rs  cli_functionality_test.rs  cli_integration_test.rs  enhanced_features_integration.rs  enhanced_mcp_integration_test.rs  enterprise_monitoring_tests.rs  function_calling.rs  llm_qwen_test.rs  mastra_features_integration.rs  mastra_integration_comprehensive_test.rs  mastra_validation_test.rs  new_tools_integration_tests.rs  prelude_integration_test.rs  security_integration_tests.rs  simplified_api_integration.rs  simplified_api_tests.rs  typescript_bindings_test.rs  vector_storage_modular_test.rs  websocket_streaming_tests.rs  workflow_integration_tests.rs
lumosai_derive/: Cargo.toml
lumosai_derive/src/: lib.rs
lumosai_enterprise/: Cargo.toml  README.md
lumosai_enterprise/examples/: multi_tenant_demo.rs
lumosai_enterprise/src/: alerting.rs  anomaly_detection.rs  capacity_planning.rs  compliance.rs  config.rs  cost_tracking.rs  error.rs  incident_management.rs  lib.rs  monitoring.rs  multi_tenant.rs  reporting.rs  security.rs  sla_monitoring.rs
lumosai_enterprise/tests/: multi_tenant_integration_tests.rs
lumosai_evals/: Cargo.toml
lumosai_evals/src/: error.rs  lib.rs
lumosai_examples/: .Cargo.toml.swp  Cargo.toml  README.md  README_DEEPSEEK.md  run_simplified_demo.rs  test_deepseek.bat  test_deepseek.sh  test_simplified_api.rs
lumosai_examples/examples/: advanced_tools_demo.rs  enhanced_app_demo.rs  simplified_api_demo.rs
lumosai_examples/src/: advanced_tools.rs  agent_tools.rs  agent_tools_simple.rs  agent_usage.rs  basic_usage.rs  deepseek_agent_demo.rs  deepseek_app.rs  deepseek_integration.rs  eval_dsl.rs  function_calling_enhancement_demo.rs  function_schema_example.rs  lib.rs  lumos_app.rs  lumos_macro_usage.rs  macro_tool_example.rs  mcp_dsl.rs  rag_dsl.rs  workflow_dsl.rs  (+2 more)
lumosai_marketplace/: Cargo.toml  README.md
lumosai_mcp/: Cargo.toml  README.md
lumosai_rag/: Cargo.toml
lumosai_ui/: Cargo.toml  Justfile  README.md  ROADMAP.md  package.json  postcss.config.mjs  tailwind.config.js  tsconfig.json  vite.config.ts
lumosai_vector/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
(+938 files in other folders)
