[package]
name = "lomusai_cli"
version = "0.1.0"
edition = "2021"
authors = ["Lomusai Team"]
description = "Lomus AI 命令行工具"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
notify = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
futures = "0.3"
async-trait = "0.1"
semver = "1.0"
regex = "1.10"
which = "5.0"
walkdir = "2.4"
colored = "2.0"

# Lomusai 依赖
# 取消注释以下行并替换为实际路径
# lomusai_core = { path = "../lomusai_core" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"
tempdir = "0.3"

[[bin]]
name = "lomus"
path = "src/main.rs" 