[package]
name = "lomusai_cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Lomus AI CLI 工具"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
colored = "2.0"
dialoguer = "0.10"
tempfile = "3.8"
ctrlc = "3.4"
thiserror = "1.0" 