[package]
name = "lomusai_evals"
version = "0.1.0"
edition = "2021"
description = "Evaluation framework for Lomusai AI platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.9"
futures = "0.3"

# 内部依赖
lomusai_core = { path = "../lomusai_core" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11" 