[package]
name = "lomusai_evals"
version = "0.1.0"
edition = "2021"
description = "Evaluation framework for Lomusai AI models"
authors = ["Lou Lou <loulou@lomusai.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.2"
futures = "0.3.29"
tracing = "0.1.40"

# 内部依赖
lomusai_core = { path = "../lomusai_core" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11.4"