[package]
name = "lumos_macro"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the Lumosai agent framework"
authors = ["Lumosai Team"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0" 