[package]
name = "lumosai_ai_extensions"
version = "0.1.0"
edition = "2021"
description = "Lumos.ai AI capability extensions - multimodal, reasoning, and domain-specific features"
license = "MIT OR Apache-2.0"
repository = "https://github.com/louloulin/lumos.ai.git"
homepage = "https://lumosai.com"

[lib]
name = "lumosai_ai_extensions"
path = "src/lib.rs"

[dependencies]
# Core Lumos.ai dependencies
lumosai_core = { path = "../lumosai_core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# Image processing
image = { version = "0.24", features = ["png", "jpeg", "gif", "webp"], optional = true }
imageproc = { version = "0.23", optional = true }

# Audio processing
rodio = { version = "0.17", optional = true }
hound = { version = "3.5", optional = true }
whisper-rs = { version = "0.10", optional = true }

# Video processing
ffmpeg-next = { version = "6.0", optional = true }

# Computer vision
opencv = { version = "0.88", optional = true }
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }

# Natural language processing
tokenizers = { version = "0.15", optional = true }
text-splitter = { version = "0.8", optional = true }

# Knowledge graph
neo4rs = { version = "0.7", optional = true }
rdf = { version = "0.2", optional = true }

# Machine learning
tch = { version = "0.13", optional = true }
ort = { version = "1.16", optional = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1.0"
base64 = "0.21"
regex = "1.10"

# Specialized libraries
pdf = { version = "0.8", optional = true }
docx-rs = { version = "0.4", optional = true }
zip = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = "3.0"
wiremock = "0.5"

[features]
default = ["vision", "audio", "nlp"]

# Core AI capabilities
vision = ["image", "imageproc", "opencv", "candle-core", "candle-nn"]
audio = ["rodio", "hound", "whisper-rs"]
video = ["ffmpeg-next"]
nlp = ["tokenizers", "text-splitter"]

# Advanced features
knowledge-graph = ["neo4rs", "rdf"]
ml-inference = ["tch", "ort", "candle-transformers"]
document-processing = ["pdf", "docx-rs", "zip"]

# All features
full = [
    "vision", "audio", "video", "nlp", 
    "knowledge-graph", "ml-inference", "document-processing"
]

[[example]]
name = "multimodal_demo"
path = "examples/multimodal_demo.rs"
required-features = ["vision", "audio"]

[[example]]
name = "reasoning_demo"
path = "examples/reasoning_demo.rs"
required-features = ["nlp", "knowledge-graph"]

[[example]]
name = "domain_adaptation_demo"
path = "examples/domain_adaptation_demo.rs"
required-features = ["full"]
