[package]
name = "lumosai_bindings"
version = "0.1.1"
edition = "2021"
description = "Multi-language bindings for Lumos.ai"
license = "MIT OR Apache-2.0"
repository = "https://github.com/louloulin/lumos.ai.git"
homepage = "https://lumosai.com"

[lib]
name = "lumosai_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Lumos.ai dependencies
lumosai_core = { path = "../lumosai_core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# FFI and bindings
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }

# JavaScript/Node.js bindings
napi = { version = "2.0", features = ["napi4", "async"], optional = true }
napi-derive = { version = "2.0", optional = true }

# C bindings for other languages
libc = { version = "0.2", optional = true }

# WebAssembly support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []

# Language-specific features
python = ["pyo3", "pyo3-asyncio"]
nodejs = ["napi", "napi-derive"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]
c-bindings = ["libc"]

# All bindings
all-bindings = ["python", "nodejs", "wasm", "c-bindings"]

[build-dependencies]
# Build scripts for different targets
pyo3-build-config = { version = "0.20", optional = true }

[package.metadata.maturin]
# Python wheel configuration
python-source = "python"
module-name = "lumosai"

[package.metadata.napi]
# Node.js addon configuration
name = "lumosai"
triples = ["x86_64-pc-windows-msvc", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
