[package]
name = "lumosai_cli"
version = "0.1.0"
edition = "2021"
description = "Lumosai CLI 工具，用于创建、开发和部署 Lumosai AI 应用"
authors = ["Lumosai Team <dev@lumosai.cn>"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tempfile = "3.8"
actix = "0.13"
actix-web = "4.4"
actix-web-actors = "4.2"
actix-files = "0.6"
actix-cors = "0.6"
awc = "3.2"
dialoguer = "0.11"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }
glob = "0.3"
notify = "6.1"
rand = "0.8"
open = "5.0"
ctrlc = "3.4"
regex = "1.10"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
lumosai_core = { path = "../lumosai_core" }

[dev-dependencies]
tempfile = "3.8"
test-case = "3.3" 