[package]
name = "lumosai_core"
version = "0.1.0"
edition = "2021"
authors = ["Lumosai Team"]
description = "Core functionality for the Lumosai framework"
license = "MIT"

[lib]
path = "src/lib.rs"

[features]
default = ["macros"]
sqlite = ["rusqlite"]
vector_sqlite = ["rusqlite"]
macros = ["lumos_macro"]
demos = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.29", optional = true }
float-cmp = "0.9"
regex = "1.10.2"
schemars = "0.8"
jsonschema = "0.17"
rand = "0.8"
async-stream = "0.3"
lumos_macro = { path = "../lumos_macro", optional = true }
async-openai = "0.18.3"
url = "2.4"

# WebSocket and streaming dependencies
tokio-tungstenite = "0.21"
tungstenite = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.8"

# 明确定义集成测试
[[test]]
name = "agent_memory_test"
path = "tests/agent_memory_test.rs"

[[test]]
name = "function_calling"
path = "tests/function_calling.rs"

[[test]]
name = "llm_qwen_test"
path = "tests/llm_qwen_test.rs"

[[test]]
name = "mastra_integration_comprehensive_test"
path = "tests/mastra_integration_comprehensive_test.rs"

[[test]]
name = "mastra_validation_test"
path = "tests/mastra_validation_test.rs"

[[test]]
name = "websocket_streaming_tests"
path = "tests/websocket_streaming_tests.rs"