[package]
name = "lumosai_core"
version = "0.1.3"
edition = "2021"
authors = ["Lumosai Team <team@lumosai.dev>"]
description = "Core functionality for the Lumosai framework - Enterprise-grade AI agent framework"
license = "MIT"
repository = "https://github.com/louloulin/lumos.ai.git"
homepage = "https://lumosai.dev"
documentation = "https://docs.rs/lumosai_core"
readme = "README.md"
keywords = ["ai", "agent", "rust", "framework", "llm"]
categories = ["development-tools", "api-bindings", "science"]

[lib]
path = "src/lib.rs"

# [[bin]]
# name = "lumos"
# path = "src/bin/lumos.rs"

[features]
weaviate = []
default = ["macros"]
sqlite = ["rusqlite"]
vector_sqlite = ["rusqlite"]
macros = ["lumos_macro"]
demos = []
# Vector storage features (temporarily disabled due to dependency conflicts)
# qdrant = ["lumosai_stores", "lumosai_stores/qdrant"]
# mongodb = ["lumosai_stores", "lumosai_stores/mongodb"]
# postgres = ["lumosai_stores", "lumosai_stores/postgres"]
# vector_stores = ["lumosai_stores"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
futures = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.29", optional = true }
float-cmp = "0.9"
regex = "1.10.2"
schemars = "0.8"
jsonschema = "0.17"
rand = "0.8"
async-stream = "0.3"
lumos_macro = { path = "../lumos_macro", optional = true }
async-openai = "0.18.3"
url = "2.4"
# lumosai_stores = { path = "../lumosai_stores", optional = true }

# New unified vector storage
lumosai_vector = { path = "../lumosai_vector", features = ["memory"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
notify = "6.0"
tracing-subscriber = "0.3"

# WebSocket and streaming dependencies
tokio-tungstenite = "0.21"
tungstenite = "0.21"
tokio-stream = "0.1"

# Authentication dependencies
base64 = "0.21"
urlencoding = "2.1"

# Security dependencies
ring = "0.17"

# Additional dependencies for new features
bytes = "1.5"
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.11"

# 明确定义集成测试
[[test]]
name = "agent_memory_test"
path = "tests/agent_memory_test.rs"

[[test]]
name = "function_calling"
path = "tests/function_calling.rs"

[[test]]
name = "llm_qwen_test"
path = "tests/llm_qwen_test.rs"

[[test]]
name = "mastra_integration_comprehensive_test"
path = "tests/mastra_integration_comprehensive_test.rs"

[[test]]
name = "mastra_validation_test"
path = "tests/mastra_validation_test.rs"

[[test]]
name = "websocket_streaming_tests"
path = "tests/websocket_streaming_tests.rs"

[[test]]
name = "enterprise_monitoring_tests"
path = "tests/enterprise_monitoring_tests.rs"

[[test]]
name = "security_integration_tests"
path = "tests/security_integration_tests.rs"

[[test]]
name = "chain_call_dsl_tests"
path = "tests/chain_call_dsl_tests.rs"

[[example]]
name = "security_demo"
path = "examples/security_demo.rs"

[[example]]
name = "demo_chain_call_dsl"
path = "../examples/demo_chain_call_dsl.rs"
