[package]
name = "lumosai_derive"
version = "0.1.1"
edition = "2021"
description = "Procedural macros for LumosAI - automatic function schema generation"
authors = ["LumosAI Team"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde_json = "1.0"
