[package]
name = "lumosai_enterprise"
version = "0.1.4"
edition = "2021"
description = "Lumos.ai企业级功能扩展模块 - 监控、安全、合规、多租户"
license = "MIT"
repository = "https://github.com/louloulin/lumos.ai.git"
keywords = ["ai", "agent", "enterprise", "monitoring", "security"]
categories = ["development-tools", "web-programming"]

[dependencies]
# Core dependencies
lumosai_core = { path = "../lumosai_core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Monitoring and observability
prometheus = { version = "0.13", optional = true }
opentelemetry = "0.21"
opentelemetry-prometheus = { version = "0.14", optional = true }
opentelemetry-jaeger = { version = "0.20", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"

# Security and encryption
jsonwebtoken = "9.0"
bcrypt = "0.15"
ring = "0.17"
rustls = "0.21"
x509-parser = "0.15"

# Machine learning for anomaly detection
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }

# Configuration and validation
config = "0.14"
validator = { version = "0.16", features = ["derive"] }

# Async and utilities
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Compression and serialization
flate2 = "1.0"
bincode = "1.3"

# Time and scheduling
cron = "0.12"
tokio-cron-scheduler = "0.9"

# Email notifications
lettre = { version = "0.11", optional = true }

# Metrics and statistics
statrs = "0.16"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"
wiremock = "0.5"

[features]
default = ["sqlite", "prometheus", "jaeger"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
prometheus = ["opentelemetry-prometheus", "dep:prometheus"]
jaeger = ["opentelemetry-jaeger"]
ml-anomaly = ["candle-core", "candle-nn", "candle-transformers"]
email-alerts = ["lettre"]
